_includes/manuals/1.5/5.2.9_cr_vmware.md
* Only VMware clusters using vSphere are supported, not standalone ESX or ESXi servers ([#1945](http://projects.theforeman.org/issues/1945)).

#### Image provisioning

Image based provisioning can be used by provisioning a new VM from a template and then running a finish script over SSH, in the same manner as the EC2 provider.  The type of provisioning method can be selected under the "Operating system" tab when creating a new host.  To configure image/template-based provisioning:

* Images refer to templates stored in vSphere which will be used as the basis for a new VM.
* Add the image by navigating to the compute resource and clicking *New Image*, enter the relative path to the template on the vSphere server, e.g. `My templates/RHEL 6` or `RHEL 6` if it isn't in a folder.  Do not include the datacenter name.
* The template needs to have a username and password set up for Foreman to SSH in after provisioning and run the finish script.
* This requires some form of DHCP orchestration for SSH access to the newly created host to work.
* A finish template to perform any post-build actions (e.g. setting up Puppet) must also be associated to the host, usually by changing the OS default finish template.

#### Console access

Consoles are provided using VNC connections from Foreman to the ESX server, which requires a firewall change to open the respective ports (TCP 5910 to 5930)

{% highlight bash %}
ssh root@esx-srv
vi /etc/vmware/firewall/vnc.xml
{% endhighlight %}

Add the following file content:

{% highlight xml %}
<ConfigRoot>
<service id='0032'>
 <id>VNC</id>
 <rule id = '0000'>
  <direction>inbound</direction>
  <protocol>tcp</protocol>
  <porttype>dst</porttype>
  <port>
   <begin>5910</begin>
   <end>5930</end>
  </port>
 </rule>
 <enabled>true</enabled>
</service>
</ConfigRoot>
{% endhighlight %}

Apply and check the firewall rule:

{% highlight bash %}
esxcli network firewall refresh
esxcli network firewall ruleset list | grep VNC
{% endhighlight %}

Lastly, make the rule persistent:

{% highlight bash %}
cp /etc/vmware/firewall/vnc.xml /vmfs/volumes/datastore1/vnc.xml
vi /etc/rc.local
# At end of file:
cp /vmfs/volumes/datastore1/vnc.xml /etc/vmware/firewall/
esxcli network firewall refresh
{% endhighlight %}

* The account that foreman uses to communicate with VCenter is assumed to have the ability to traverse the entire inventory in order to locate a given datacenter.  A patch is required to instruct foreman to navigate directly to the appropriate datacenter to avoid permission issues ([#5006](http://projects.theforeman.org/issues/5006)).
