_includes/manuals/1.8/5.2.9_cr_vmware.md
* Only VMware clusters using vSphere are supported, not standalone ESX or ESXi servers ([#1945](http://projects.theforeman.org/issues/1945)).

#### Image provisioning

Image based provisioning can be used by provisioning a new VM from a template and then running a finish script over SSH, in the same manner as the EC2 provider.  The type of provisioning method can be selected under the "Operating system" tab when creating a new host.  To configure image/template-based provisioning:

* Images refer to templates stored in vSphere which will be used as the basis for a new VM.
* Add the image by navigating to the compute resource and clicking *New Image*, enter the relative path and name of the template on the vSphere server, e.g. `My templates/RHEL 6` or `RHEL 6` if it isn't in a folder.  Do not include the datacenter name.
* The template needs to have a username and password set up for Foreman to SSH in after provisioning and run the finish script.
* This requires some form of DHCP orchestration for SSH access to the newly created host to work.
* A finish template to perform any post-build actions (e.g. setting up Puppet) must also be associated to the host, usually by changing the OS default finish template.

#### Image provisioning without SSH

The same process can also be done using a user_data template. To configure image/template-based provisioning without SSH, make the following adjustments for the former procedure:
* Enable user_data checking the proper checkbox in the compute resource definition
* Associate a user_data template to the host, using cloud-init syntax
* Note that the images dont need cloudinit installed, as the cloudinit is converted under the hood to a CustomisationSpec object that VMware can process

#### Console access

Consoles are provided using VNC connections from Foreman to the ESX server, which requires a firewall change to open the respective ports (TCP 5901 to 5964)

{% highlight bash %}
ssh root@esx-srv
vi /etc/vmware/firewall/vnc.xml
{% endhighlight %}

Add the following file content:

{% highlight xml %}
<ConfigRoot>
<service id='0032'>
 <id>VNC</id>
 <rule id = '0000'>
  <direction>inbound</direction>
  <protocol>tcp</protocol>
  <porttype>dst</porttype>
  <port>
   <begin>5901</begin>
   <end>5964</end>
  </port>
 </rule>
 <enabled>true</enabled>
</service>
</ConfigRoot>
{% endhighlight %}

Apply and check the firewall rule:

{% highlight bash %}
esxcli network firewall refresh
esxcli network firewall ruleset list | grep VNC
{% endhighlight %}

Lastly, make the rule persistent.

With ESX:

{% highlight bash %}
cp /etc/vmware/firewall/vnc.xml /vmfs/volumes/datastore1/vnc.xml
vi /etc/rc.local
# At end of file :
cp /vmfs/volumes/datastore1/vnc.xml /etc/vmware/firewall/
esxcli network firewall refresh
{% endhighlight %}

With ESXi:

{% highlight bash %}
cp /etc/vmware/firewall/vnc.xml /vmfs/volumes/datastore1/vnc.xml
vi /etc/rc.local.d/local.sh
# At end of file, just before exit 0 :
cp /vmfs/volumes/datastore1/vnc.xml /etc/vmware/firewall/
esxcli network firewall refresh
{% endhighlight %}

If permanent shared storage is available (direct-attach SAN, etc): rather than doing a file copy on each server, use a symlink instead.  Once it's changed on the shared storage, run a loop to refresh the firewall services. The local.sh file still needs to be created.

Example:

{% highlight bash %}
ln -s /vmfs/volumes/{uuid of shared storage}/firewall.rules/vnc.xml /etc/vmware/firewall/vnc.xml
{% endhighlight %}

#### Required Permissions
The minimum permissions to properly provision new virtual machines are:

* All Privileges -> Datastore -> Allocate Space
* All Privileges -> Network -> Assign Network
* All Privileges -> Resource -> Assign virtual machine to resource pool
* All Privileges -> Virtual Machine -> Configuration (All)
* All Privileges -> Virtual Machine -> Interaction
* All Privileges -> Virtual Machine -> Inventory
* All Privileges -> Virtual Machine -> Provisioning

#### Notes
* Log in to the VMware vSphere Server that represents the Compute Resource. Create a role with the above permissions. Add the appropriate account to the role. To create user accounts, roles or for complete details on administration of VMware vSphere, please consult your VMware vSphere Server documentation.
* The account that foreman uses to communicate with VCenter is assumed to have the ability to traverse the entire inventory in order to locate a given datacenter.  A patch is required to instruct foreman to navigate directly to the appropriate datacenter to avoid permission issues ([#5006](http://projects.theforeman.org/issues/5006)).
* Reference in the [VMWare KB 2043564](http://kb.vmware.com/selfservice/microsites/search.do?cmd=displayKC&docType=kc&externalId=2043564&sliceId=1&docTypeID=DT_KB_1_1&dialogID=458724081&stateId=1%200%20458722496).
* For debugging purpose, read the [troubleshooting guide about NoVNC](/manuals/{{page.version}}/index.html#7.1NoVNC).
